# MakNe-repo

./: .gitignore  README.md  VFH_navigator_main.py  velocitycontrol_test.py
src/: test.py
src/makne_chase_mode/: chase_manager.py  euler_from_quaternion.py  polar_calculator_main.py  vfh_navigator_main.py  yolo_orb_tracker_main.py
src/makne_chase_mode/SUB/: accuracy_of_depth1.py  accuracy_of_depth2.py  decode_compressed_image.py  image_converter_main.py  projection_to_scanmap.py  sensor_fusion_static.py  yolo_orb_tracker_main2.py
src/makne_db/: package.xml  setup.cfg  setup.py
src/makne_db/makne_db/: db_manager.py
src/makne_db/makne_db/db/: makne_db
src/makne_msgs/: CMakeLists.txt  package.xml
src/makne_msgs/msg/: MsgTest.msg
src/makne_msgs/srv/: BoolSignal.srv  GetStatus.srv  SetPointList.srv  SetWaypoint.srv
src/makne_service/: package.xml  setup.cfg  setup.py
src/makne_service/makne_service/: chase_manager.py  checkpoint_calculator.py  dummy_action_client.py  dummy_action_server.py  dummy_robot_manager.py  map_editor.py  robot_manager.py  robot_state_subscription_node.py  send_goal_client.py  slack_message_handler.py  test.py  waypoint_calculator.py
src/makne_ui/: package.xml  setup.cfg  setup.py
src/makne_ui/makne_ui/: admin_ui.py  admin_ui_test.py  slack_test.py
src/makne_ui/makne_ui/data/: room_103.pgm  room_103.yaml  wtf1.pgm  wtf1.yaml
src/makne_ui/makne_ui/ui/: admin_service.ui  slack_test.ui
