<?xml version="1.0"?>
<package format="3">
  <name>makne_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dlwlgh0106@gmail.com">joe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 여기에 의존성을 추가합니다 -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
